--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,42 +1,80 @@
-# Java Gradle CircleCI 2.0 configuration file
-#
-# Check https://circleci.com/docs/2.0/language-java/ for more details
-#
-version: 2
+version: 2.0
+
 jobs:
   build:
     docker:
-      # specify the version you desire here
-      - image: circleci/openjdk:8-jdk
-
-      # Specify service dependencies here if necessary
-      # CircleCI maintains a library of pre-built images
-      # documented at https://circleci.com/docs/2.0/circleci-images/
-      # - image: circleci/postgres:9.4
-
-    working_directory: ~/repo
-
-    environment:
-      # Customize the JVM maximum heap limit
-      JVM_OPTS: -Xmx3200m
-      TERM: dumb
-
+      - image: circleci/openjdk-11-boot-buster
+        environment:
+          MAVEN_OPTS: -Xmx1024m
+    working_directory: ~/project/testng
     steps:
-      - checkout
-
-      # Download and cache dependencies
+      - checkout:
+          path: ~/project
       - restore_cache:
           keys:
-            - v1-dependencies-{{ checksum "build.gradle" }}
-            # fallback to using the latest cache if no exact match is found
-            - v1-dependencies-
+            - $CIRCLE_PROJECT_REPONAME-{{ checksum "pom.xml" }}
+            - $CIRCLE_PROJECT_REPONAME-
 
-      - run: gradle dependencies
+      - run:
+          name: Resolve Maven dependencies
+          command: mvn dependency:go-offline compile compiler:testCompile
+      - run:
+          name: Autotests
+          command: mvn test
+          when: always
+      - run:
+          name: Generate environment properties
+          command: echo -e "BUILD_NUM=$CIRCLE_BUILD_NUM \nstaging=${STAGING:-alpha}" >> target/allure-results/environment.properties
+          when: always
+      - run:
+          name: Make history dir for allure
+          command: mkdir target/allure-results/history
+          when: always
+      - run:
+          name: Get previous artifact links
+          command: curl https://circleci.com/api/v1.1/project/github/$CIRCLE_PROJECT_USERNAME/$CIRCLE_PROJECT_REPONAME/$CIRCLE_PREVIOUS_BUILD_NUM/artifacts?circle-token=$artifacts | grep -o 'https:\/\/[^"]*Allure\/history\/.*\.json' > artifacts.txt || true
+          when: always
+      - run: cat artifacts.txt
+      - run:
+          name: Download history artfacts
+          command: <artifacts.txt xargs -P4 -I % wget %?circle-token=$artifacts
+          when: always
+      - run:
+          name: Rename and copy history artifacts to allure-result
+          command: |
+            mv history.json?circle-token=$artifacts history.json && mv history-trend.json?circle-token=$artifacts history-trend.json || true
+            cp history.json target/allure-results/history/ && cp history-trend.json target/allure-results/history/ || true
+            mv categories-trend.json?circle-token=$artifacts categories-trend.json && mv duration-trend.json?circle-token=$artifacts duration-trend.json || true
+            cp categories-trend.json target/allure-results/history/ && cp duration-trend.json target/allure-results/history/ || true
+            mv retry-trend.json?circle-token=$artifacts retry-trend.json || true
+            cp retry-trend.json target/allure-results/history/ || true
+          when: always
+
+      - run:
+          name: Allure Report
+          command: mvn allure:report
+          when: always
 
       - save_cache:
           paths:
-            - ~/.gradle
-          key: v1-dependencies-{{ checksum "build.gradle" }}
+            - ~/.m2
+            - .allure
+          key: $CIRCLE_PROJECT_REPONAME-{{ checksum "pom.xml" }}
+          when: always
+      - store_test_results:
+          path: target/surefire-reports/junitreports
+      - store_artifacts:
+          path: target/surefire-reports
+          #destination: report/testng-results
+      - store_artifacts:
+          path: target/allure-results
+          #destination: report/allure-results
+      - store_artifacts:
+          path: target/site/allure-maven-plugin
+          destination: Allure
 
-      # run tests!
-      - run: gradle test
+workflows:
+  version: 2
+  autotests_and_report:
+    jobs:
+      - build
