--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -35,3 +35,5 @@ jobs:
       with:
           target_branch: gh-pages
           build_dir: target/site/allure-maven-plugin
+      env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}    
